--- a/ExtensionContent/css/style.css
+++ b/ExtensionContent/css/style.css
@@ -625,15 +625,15 @@ label {
 }
 
 .cloudLinkDiv {
-	width: 150px;
-	height: 36px;
-	padding-top: 11px;
+	width: 25px;
+	height: 0px;
+	padding-top: 0px;
 	border-style: solid;  
 	border-width: 0px 0px 1px 0px;  
 	border-color: #808080;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
+	margin-left: 10px;
+	margin-top: 10px;
+  	margin-bottom: 20px;
 }
 
 .linkLabel {
@@ -642,20 +642,21 @@ label {
 	color: #4c7cff;
 	font-style: normal;
 	cursor: default;
+	margin-left: 10px;
 }
 
-#deActivate {
+/* #deActivate {
 	margin-top: 30px;
 	margin-left: auto;
 	margin-right: auto;
 	height: 30px;
-	padding-top: 6px;
+	line-height: 30px;
 	width: 200px;
 	text-align: center;
 	background: transparent;
 	border: 1px solid #000000;
 	-webkit-border-radius: 5px;
-}
+} */
 
 #deActivate label {
 	font-family: aauxProBol;
